<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone8ChangePhotoVM" type="com.zaesapplication.app.modules.iphone8changephoto.data.viewmodel.Iphone8ChangePhotoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearIPhone8Chan"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleindigo_900">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_20pxh"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginStart="@dimen/_17pxh"
                    android:layout_marginTop="@dimen/_18pxv"
                    android:layout_width="@dimen/_20pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft_white_a700"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft_white_a700"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGantiFotoProf"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_138pxh"
                    android:layout_marginStart="@dimen/_18pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.9"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{iphone8ChangePhotoVM.iphone8ChangePhotoModel.txtGantiFotoProf}"
                    style="@style/txtNunitobold24" tools:text="@string/msg_ganti_foto_prof"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <ImageView android:id="@+id/imageImageOne"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_343pxh"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="@dimen/_343pxh"
            android:scaleType="fitXY" cornerRadius="@{@dimen/_8pxh}"
            imageRes="@{@drawable/img_image1_343x343}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_image1_343x343"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAmbilDariKameraOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/msg_ambil_dari_kame2"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_ambil_dari_kame2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAmbilDariGallery"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_16pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/msg_ambil_dari_gall2"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_ambil_dari_gall2"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnSimpan"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_78pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_13pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_13pxv" android:singleLine="true"
            android:text="@string/lbl_simpan"
            android:textAllCaps="false" style="@style/btnSolid" tools:text="@string/lbl_simpan"/>
    </LinearLayout>
</layout>
