<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="iphone8TwoVM" type="com.zaesapplication.app.modules.iphone8two.data.viewmodel.Iphone8TwoVM"/>
    </data>
    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearIPhone8Two"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <androidx.appcompat.widget.Toolbar android:gravity="start"
            android:id="@+id/toolbarToolbar"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" app:contentInsetStart="0dp">
            <LinearLayout android:gravity="start"
                android:id="@+id/linearRowarrowleft"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStyleindigo_900">
                <ImageView android:id="@+id/imageArrowleft"
                    android:layout_height="@dimen/_16pxh"
                    android:layout_marginBottom="@dimen/_19pxv"
                    android:layout_marginStart="@dimen/_13pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="@dimen/_16pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_arrowleft"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_arrowleft"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtGantiFotoProf"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_12pxv"
                    android:layout_marginEnd="@dimen/_146pxh"
                    android:layout_marginStart="@dimen/_15pxh"
                    android:layout_marginTop="@dimen/_10pxv"
                    android:layout_weight="0.92"
                    android:layout_width="0dp" android:singleLine="true"
                    android:text="@{iphone8TwoVM.iphone8TwoModel.txtGantiFotoProf}"
                    style="@style/txtNunitobold24" tools:text="@string/msg_ganti_foto_prof"/>
            </LinearLayout>
        </androidx.appcompat.widget.Toolbar>
        <View
            android:background="@drawable/rectangle_bg_bluegray_100_radius_8"
            android:id="@+id/viewRectangleSix"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_343pxh"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv" android:layout_width="@dimen/_343pxh"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAmbilDariKameraOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_43pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/msg_ambil_dari_kame"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_ambil_dari_kame"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnAmbilDariGallery"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_16pxh"
            android:layout_marginStart="@dimen/_16pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_11pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_11pxv" android:singleLine="true"
            android:text="@string/msg_ambil_dari_gall"
            android:textAllCaps="false" style="@style/btnSolidRounded" tools:text="@string/msg_ambil_dari_gall"/>
    </LinearLayout>
</layout>
